--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 </head>
 
 <body>
-  <!-- 1번 -->
-
-  
 
   <header class="hd">
     <div class="top">
@@ -96,7 +93,7 @@
 
 
   <div class="visualWrap"></div>
-  <!-- 2번 -->
+
 
     <div class="container sec1st">
       <!-- 기존 페이지의 contents topclasswrap -->
@@ -246,7 +243,6 @@
       </div>
     </div>
 
-    <!-- 3번 -->
     <div class="sec2st pt-5">
       <div class="container">
         <div class="home_inner">
@@ -325,7 +321,6 @@
       </div>
     </div>
 
-    <!-- 4번 -->
     <div class="container sec3st py-5 px-0">
       <div class="texttop text-bold">
         <p class="texttoptitle fw-bold mb-2">클래스몰</p>
@@ -423,7 +418,7 @@
     </div>
 
     <!-- script -->
-    <!-- 부트스트랩 -->
+    <!-- bootstrap -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"
       integrity="sha512-7Pi/otdlbbCR+LnW+F7PwFcSDJOuUJB3OxtEHbg4vSMvzvJjde4Po1v4BR9Gdc9aXNUNFVUY+SK51wWT8WF0Gg=="
